@@ -43,6 +43,17 @@
   </provides>
 
   <releases>
+    <release version="0.3.2" date="2016-07-07">
+      <description>
+        <ul>
+          <li>Fix incorrect description of paging-enabled key.</li>
+          <li>Migrate from gnome-doc-utils to yelp-tools.</li>
+          <li>Port away from gnome-common.</li>
+          <li>Stop using deprecated ACLOCAL_AMFLAGS.</li>
+          <li>Migrate from intltool to Gettext.</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.3.1" date="2016-02-20">
       <description>
         <ul>
